[package]
name = "daisy-embassy"
version = "0.2.3"
edition = "2024"
authors = ["DicklessGreat<dicklessgreat@gmail.com>"]
description = "async audio development with daisy seed and embassy"
keywords = ["embassy", "async", "audio", "embedded", "no-std"]
license = "MIT"
repository = "https://github.com/daisy-embassy/daisy-embassy"
categories = ["embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.6.0", features = ["defmt", "stm32h750ib", "time-driver-tim5", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768", "generic-queue-8"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
cortex-m = "0.7.7"
static_cell = "2.1.1"
defmt = "1.0.1"
grounded = "0.2.0"
wm8731 = "0.1.0"
stm32-fmc = "0.4.0"

[dev-dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.0", features = ["device"] }
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1.2"
embassy-usb = {version = "0.6.0", features = ["defmt"]}
critical-section = "1.2.0"
heapless = { version = "0.8", default-features = false }
micromath = "2.0.0"

[features]
seed = []
seed_1_1 = []
seed_1_2 = []
patch_sm = []
# defmt = []

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "2a1ea6766d00c867c717290d0bb31a8e3f237dca" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "2a1ea6766d00c867c717290d0bb31a8e3f237dca" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "2a1ea6766d00c867c717290d0bb31a8e3f237dca" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "2a1ea6766d00c867c717290d0bb31a8e3f237dca" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "2a1ea6766d00c867c717290d0bb31a8e3f237dca" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "2a1ea6766d00c867c717290d0bb31a8e3f237dca" }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true


[[example]]
name = "passthrough"
path = "examples/passthrough.rs"
[[example]]
name = "triangle_wave_tx"
path = "examples/triangle_wave_tx.rs"
[[example]]
name = "blinky"
path = "examples/blinky.rs"
[[example]]
name = "sdram"
path = "examples/sdram.rs"
[[example]]
name = "flash"
path = "examples/flash.rs"
[[example]]
name = "usb_serial"
path = "examples/usb_serial.rs"
[[example]]
name = "looper"
path = "examples/looper.rs"
[[example]]
name = "usb_uac"
path = "examples/usb_uac.rs"
